Fixed spacing in icon and heading
git-svn-id: http://vreportetl01t.corp.hds.com/svnrepo/HDS.com-Revamp/hdscorp@1784 b06f84e9-1d16-493f-8c0d-41b76f67d7c8

--- a/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/partner-detail.css
+++ b/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/partner-detail.css
@@ -26,6 +26,13 @@
   vertical-align: middle;
   width: 8%;
 }
+
+@media only screen and (min-width: 1024px) {
+.partners-section .partner-program .heading .icon{
+  width: 5%;
+}
+}
+
 .partners-section .partner-program .heading h2{
   font-family: "museo-sans",Helvetica,Arial,sans-serif;
   font-size: 1.875rem;
